Add bootstrap 4 with scss src via npm
Only stylesheets are getting included so far. Need to work on JS next.

--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -1,7 +1,8 @@
 doctype html
-html(lang="en")
+html(lang='en')
   head
     title Brunch with Foo
+    link(href='app.css', rel='stylesheet')
   body
     h1 Brunch with Foo
     p Placeholder for something awesome
